--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
@@ -149,7 +149,9 @@
                                     $(document).Toasts('create', {
                                         class: 'bg-success',
                                         title: 'Başarılı',
-                                        body: 'Kategori başarıyla silindi.'
+                                        body: 'Kategori başarıyla silindi.',
+                                        autohide: true,
+                                        delay: 5000
                                     });
 
                                     table.ajax.reload();
@@ -161,6 +163,8 @@
                                         class: 'bg-danger',
                                         title: 'Hata',
                                         body: message,
+                                        autohide: true,
+                                        delay: 5000
                                     });
                                 }
                             },
@@ -169,7 +173,9 @@
                                     class: 'bg-danger',
                                     title: 'Hata',
                                     subtitle: '',
-                                    body: 'Silme işlemi başarısız oldu.'
+                                    body: 'Silme işlemi başarısız oldu.',
+                                    autohide: true,
+                                    delay: 5000
                                 });
                             }
                         });
