--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/List.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/List.cshtml
@@ -177,7 +177,9 @@
                                     $(document).Toasts('create', {
                                         class: 'bg-success',
                                         title: 'Başarılı',
-                                        body: 'Ürün başarıyla silindi.'
+                                        body: 'Ürün başarıyla silindi.',
+                                        autohide: true,
+                                        delay: 5000
                                     });
 
                                     table.ajax.reload();
@@ -189,6 +191,8 @@
                                         class: 'bg-danger',
                                         title: 'Hata',
                                         body: message,
+                                        autohide: true,
+                                        delay: 5000
                                     });
                                 }
                             },
@@ -197,7 +201,9 @@
                                     class: 'bg-danger',
                                     title: 'Hata',
                                     subtitle: '',
-                                    body: 'Silme işlemi başarısız oldu.'
+                                    body: 'Silme işlemi başarısız oldu.',
+                                    autohide: true,
+                                    delay: 5000
                                 });
                             }
                         });
