--- a/CafeMenuProject.WebUI/Areas/Admin/Views/User/Create.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/User/Create.cshtml
@@ -30,8 +30,11 @@
             <div class="card-body">
                 @if (ViewBag.ErrorMessage != null)
                 {
-                    <div class="alert alert-danger">
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
                         @ViewBag.ErrorMessage
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                 }
 
