--- a/CafeMenuProject.WebUI/Areas/Admin/Views/User/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/User/Edit.cshtml
@@ -28,6 +28,16 @@
                 </h3>
             </div>
             <div class="card-body">
+                @if (ViewBag.ErrorMessage != null)
+                {
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        @ViewBag.ErrorMessage
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                }
+
                 @using (Html.BeginForm("Edit", "User", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
