--- a/CafeMenuProject.WebUI/Views/Shared/_Layout.cshtml
+++ b/CafeMenuProject.WebUI/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Admin", "Dashboard", "Home", new { area = "Admin" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Login", "Login", "Account", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
