--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_MainSidebar.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_MainSidebar.cshtml
@@ -1,60 +1,28 @@
-﻿<aside class="main-sidebar sidebar-dark-primary elevation-4">
+﻿@{
+    var currentUser = AuthHelper.GetCurrentUser();
+}
+
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
     <a href="index3.html" class="brand-link">
         <img src="~/Content/adminlte/dist/img/logo.png" alt="Cafe Menu App Logo" class="brand-image elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">Cafe Menu App</span>
     </a>
 
     <div class="sidebar">
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class="image">
-                <img src="~/Content/adminlte/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+        @if (currentUser != null)
+        {
+            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                <div class="image">
+                    <img src="~/Content/adminlte/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                </div>
+                <div class="info">
+                    <a href="#" class="d-block">@currentUser.Value.fullName</a>
+                </div>
             </div>
-            <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
-            </div>
-        </div>
+         }
 
         <nav class="mt-2">
             @Html.Partial("Partials/_NavSidebar")
-
-            @*<ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <li class="nav-item">
-                    <a href="@Url.Action("Dashboard", "Home", new { area = "Admin" })" class="nav-link">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
-                        <p>Dashboard</p>
-                    </a>
-                </li>
-
-                <li class="nav-item menu-open">
-                    <a href="#" class="nav-link active">
-                        <i class="nav-icon fas fa-book"></i>
-                        <p>
-                            Katalog
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a href="@Url.Action("List", "Category", new { area = "Admin" })" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Kategoriler</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("List", "Product", new { area = "Admin" })" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Ürünler</p>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a href="@Url.Action("List", "User", new { area = "Admin" })" class="nav-link">
-                        <i class="nav-icon far fa-user"></i>
-                        <p>Kullanıcılar</p>
-                    </a>
-                </li>
-            </ul>*@
         </nav>
     </div>
 </aside>
