--- a/CafeMenuProject.WebUI/Views/Shared/_Layout.cshtml
+++ b/CafeMenuProject.WebUI/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    
+
                     @if (currentUser != null)
                     {
                         <li>@Html.ActionLink("Admin", "Dashboard", "Home", new { area = "Admin" }, new { @class = "nav-link" })</li>
@@ -31,6 +31,7 @@
                     else
                     {
                         <li>@Html.ActionLink("Login", "Login", "Account", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Register", "Register", "Account", new { area = "" }, new { @class = "nav-link" })</li>
                     }
                 </ul>
             </div>
