--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_Navbar.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_Navbar.cshtml
@@ -5,11 +5,16 @@
         </li>
     </ul>
 
-    <ul class="navbar-nav ml-auto"> 
+    <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+            <a class="nav-link" href="/Account/Logout">
+                <i class="fas fa-sign-out-alt"></i> Logout
+            </a>
+        </li>
+        @*<li class="nav-item">
             <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                 <i class="fas fa-expand-arrows-alt"></i>
             </a>
-        </li>
+        </li>*@
     </ul>
 </nav>
