--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_CreatePropertyModal.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/_CreatePropertyModal.cshtml
@@ -10,9 +10,11 @@
                 </button>
             </div>
             <div class="modal-body">
+                @Html.AntiForgeryToken()
+
                 <div class="form-group">
                     @Html.LabelFor(x => x.CreatePropertyModel.Key, "Özellik Adı (Key)", htmlAttributes: new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.CreatePropertyModel.Key, new { @class = "form-control", placeholder = "Key" })                    
+                    @Html.TextBoxFor(x => x.CreatePropertyModel.Key, new { @class = "form-control", placeholder = "Key" })
                 </div>
 
                 <div class="form-group">
